<?xml version="1.0"?>
<package>
  <name>tf_velodyne</name>
  <version>0.0.0</version>
  <description>The tf_velodyne package</description>

  <license>BSD</license>
  <maintainer email="o.o.kutkina@gmail.com">Oksana Kutkina</maintainer>
  <author>Oksana Kutkina</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

</package>